# cs348K-final-project

./: .gitignore  CMakeLists.txt  README.md
scripts/: clean-seg.py  run_all_images.sh
src/: benchmark.h  portrait_generator.cpp  portrait_main.cpp
writeup/: Makefile  biblio.bib  main.tex
